deployments/ingress-resource/ingress-resource.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource
  namespace: toolchain
  # annotations:
  #   kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: nexus-dso.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nexus-service
            port:
              number: 8081
  - host: jenkins-dso.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: jenkins-service
            port:
              number: 8080
  - host: argocd-dso.example.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: argocd-server
            port:
              number: 8080 
  # tls:
  # - hosts:
  #   - nexus-dso.example.com
  #   - jenkins-dso.example.com
  #   secretName: example-com-tls
